# algokit-ds

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py  setup_algorithms_module.sh  setup_algorithms_v2.sh
benchmarks/: algorithms_benchmark.py
cmake/: pch_dummy.cpp
cpp/algorithms/: algorithms.cpp  algorithms.hpp  py_callback.hpp
python/algokit_ds/: __init__.py  _base.py  deque.py  map.py  multimap.py  multiset.py  queue.py  set.py  stack.py  unordered_map.py  unordered_multiset.py  unordered_set.py  vector.py
python/algokit_ds/_swig/: __init__.py  algorithms.py  deque.py  map.py  multimap.py  multiset.py  queue.py  set.py  stack.py  unordered_map.py  unordered_multiset.py  unordered_set.py  vector.py
python/algokit_ds/algorithms/: __init__.py  _algorithms.py  _registry.py
swig/: algorithms.i  deque.i  map.i  multimap.i  multiset.i  queue.i  set.i  stack.i  unordered_map.i  unordered_multiset.i  unordered_set.i  vector.i
tests/: test_algorithms.py  test_algorithms_extended.py  test_deque.py  test_maps.py  test_release_v1.py  test_sets.py  test_stack_queue.py  test_vector.py
tools/: algorithms_spec.py  generate_algorithms_swig.py
