[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algokit-ds"
version = "0.1.0"
description = "Pythonic wrappers around C++ STL data structures, backed by native SWIG bindings"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ayush" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/ayush09062004/algokit-ds"
Repository = "https://github.com/ayush09062004/algokit-ds"

[tool.setuptools]
packages = [
    "algokit_ds",
    "algokit_ds._swig",
]
package-dir = { "" = "python" }

[tool.setuptools.package-data]
"algokit_ds._swig" = ["*.so", "*.pyd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
